remove temp text and fix icon shifting

--- a/packages/webapp/src/components/Map/Footer/styles.module.scss
+++ b/packages/webapp/src/components/Map/Footer/styles.module.scss
@@ -23,7 +23,7 @@
 
 .button:hover {
   border-top: 8px solid var(--teal700);
-  padding-bottom: 7px;
+  padding-bottom: 8px;
 
   .svg {
     fill: var(--teal700);
